# SEKURO_TUGAS_1_Abraham-Bagunna-Adiwijaya_PROGRAMMING

./: README.md
src/oop_soal_1/: core_mcu.cpp  core_mcu.hpp  program
src/oop_soal_2_bonus/: CMakeLists.txt
src/oop_soal_2_bonus/include/: mcu.hpp  mcu_walker.hpp
src/oop_soal_2_bonus/src/: mcu.cpp  mcu_cam_controller.cpp  mcu_walker.cpp
src/ros_soal_1/AraAra_ws/install/: local_setup.sh  setup.sh
src/ros_soal_1/AraAra_ws/install/Robot_AraAra/lib/Robot_AraAra/: robot_exe  suara_exe
src/ros_soal_1/AraAra_ws/install/Robot_AraAra/share/Robot_AraAra/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/ros_soal_1/AraAra_ws/install/Robot_AraAra/share/Robot_AraAra/launch/: Robot_AraAra.py
src/ros_soal_1/AraAra_ws/install/Robot_AraAra/share/ament_index/resource_index/parent_prefix_path/: Robot_AraAra
src/ros_soal_1/AraAra_ws/log/: latest_build
src/ros_soal_1/AraAra_ws/src/Robot_AraAra/: CMakeLists.txt  package.xml
src/ros_soal_1/AraAra_ws/src/Robot_AraAra/src/: robot_subscriber.cpp  suara_publisher.cpp
src/stl_soal/: Robot_Penjaga_Gudang.cpp  a
